[package]
name = "torii"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
description = "A Kubernetes Gateway API controller built on Pingora"

# pingora/ and gateway-api/ are vendored references with their own workspaces.
# We depend on pingora via path (below); they are NOT part of this package.

[[bin]]
name = "torii"
path = "src/main.rs"

[dependencies]
# Kubernetes client + controller-runtime. Pin kube and k8s-openapi together.
kube = { version = "3.1", default-features = false, features = [
    "client",
    "runtime",
    "derive",
    "rustls-tls",
] }
# Exactly ONE k8s_openapi version feature may be enabled across the whole graph,
# and it must be set by the final binary crate (this one).
k8s-openapi = { version = "0.27", default-features = false, features = ["v1_33"] }
# Gateway API CRD types (v1.5.1). Pin exactly: 0.21 has HTTPRoute (double-P) as the
# root type; nested/status types are HttpRoute*. Depends on kube 3.1 + k8s-openapi 0.27.
gateway-api = "=0.21.0"

# Pingora data plane (from crates.io). We enable the `openssl` TLS backend
# (system OpenSSL) rather than rustls, because TLS termination with per-SNI
# certificate selection requires the OpenSSL/BoringSSL certificate callback
# (rustls in Pingora has no such hook).
pingora-core = { version = "0.8", features = ["openssl"] }
pingora-proxy = { version = "0.8", features = ["openssl"] }
pingora-http = "0.8"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4", features = ["derive", "env"] }
# kube's `rustls-tls` leaves the crypto backend to the app; we pick `ring` and
# install it as the process default before building any client.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
anyhow = "1"
async-trait = "0.1"
arc-swap = "1"
http = "1"
futures = "0.3"
regex = "1" # HTTPRoute header match type=RegularExpression
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ACME (automatic TLS cert issuance via TLS-ALPN-01). Use the `ring` crypto
# backend to match our rustls(ring) process provider and avoid pulling aws-lc-rs.
instant-acme = { version = "0.8", default-features = false, features = [
    "ring",
    "hyper-rustls",
] }
rcgen = "0.14" # validation cert (id-pe-acmeIdentifier) + issued-cert keypair/CSR
kube-leader-election = "0.43" # coordination.k8s.io Lease leader election
x509-parser = "0.16" # read cert notAfter for renewal scheduling
