[package]
name = "lolgateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A Kubernetes Gateway API controller built on Pingora"

[[bin]]
name = "lolgateway"
path = "src/main.rs"

[dependencies]
kube.workspace = true
# The binary crate is the single place that selects the k8s API version.
k8s-openapi = { workspace = true, features = ["v1_33"] }
gateway-api.workspace = true

pingora-core.workspace = true
pingora-proxy.workspace = true
pingora-http.workspace = true

tokio.workspace = true
clap.workspace = true
rustls.workspace = true
anyhow.workspace = true
async-trait.workspace = true
arc-swap.workspace = true
http.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

instant-acme.workspace = true
rcgen.workspace = true
kube-leader-election.workspace = true
x509-parser.workspace = true
